vpc/subnets/private_subnets_internet_route.template
{
  "AWSTemplateFormatVersion" : "2010-09-09",
  "Description": "This template creates the internet routes for the private network tier",
  "Parameters": {
    "PrivateSubnetAz1RouteTableId": {
      "Description": "Private Subnet 1 Route Table ID in Availability Zone 1",
      "Type": "String"
    },
    "PrivateSubnetAz2RouteTableId": {
      "Description": "Private Subnet 2 Route Table ID in Availability Zone 2",
      "Type": "String"
    },
    "PrivateSubnetAz3RouteTableId": {
      "Description": "Private Subnet 3 Route Table ID in Availability Zone 3",
      "Type": "String"
    },
    "PrivateSubnetAz4RouteTableId": {
      "Description": "Private Subnet 4 Route Table ID in Availability Zone 4",
      "Type": "String"
    },
    "NATGateway1Id": {
      "Description": "NAT Gateway 1 ID in Availability Zone 1",
      "Type": "String"
    },
    "NATGateway2Id": {
      "Description": "NAT Gateway 2 ID in Availability Zone 2",
      "Type": "String"
    },
    "NATGateway3Id": {
      "Description": "NAT Gateway 3 ID in Availability Zone 3",
      "Type": "String"
    },
    "NATGateway4Id": {
      "Description": "NAT Gateway 4 ID in Availability Zone 4",
      "Type": "String"
    },
    "NumberOfAzs": {
      "Description": "Number of Availability Zones to use in the VPC. This must match your selections in the list of Availability Zones parameter.",
      "Type": "String",
      "AllowedValues": [
        "2",
        "3",
        "4"
      ]
    },
    "Vpc": {
      "Description": "VPC ID",
      "Type": "String"
    },
    "VpcName": {
      "Description": "VPC Name",
      "Type": "String"
    }
  },
  "Conditions": {
    "3AzCondition": {
      "Fn::Or": [
        {
          "Fn::Equals": [
            {
              "Ref": "NumberOfAzs"
            },
            "3"
          ]
        },
        {
          "Condition": "4AzCondition"
        }
      ]
    },
    "4AzCondition": {
      "Fn::Equals": [
        {
          "Ref": "NumberOfAzs"
        },
        "4"
      ]
    }
  },
  "Resources" : {
    "PrivateSubnetAz1InternetRoute" : {
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NATGateway1Id"
        },
        "RouteTableId": {
          "Ref": "PrivateSubnetAz1RouteTableId"
        }
      }
    },
    "PrivateSubnetAz2InternetRoute" : {
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NATGateway2Id"
        },
        "RouteTableId": {
          "Ref": "PrivateSubnetAz2RouteTableId"
        }
      }
    },
    "PrivateSubnetAz3InternetRoute" : {
      "Condition": "3AzCondition",
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NATGateway3Id"
        },
        "RouteTableId": {
          "Ref": "PrivateSubnetAz3RouteTableId"
        }
      }
    },
    "PrivateSubnetAz4InternetRoute" : {
      "Condition": "4AzCondition",
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NATGateway4Id"
        },
        "RouteTableId": {
          "Ref": "PrivateSubnetAz4RouteTableId"
        }
      }
    }
  }
}
