vpc/subnets/public_subnets.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "This template creates subnets, route tables, NACLs, and NAT Gateways for the public network tier",
  "Parameters": {
    "CostCenter": {
      "Description": "CostCenter tag value",
      "Type": "String"
    },
    "InternetGatewayID": {
      "Description": "Internet Gateway ID",
      "Type": "String"
    },
    "NumberOfAZs": {
      "Description": "Number of Availability Zones to use in the VPC. This must match your selections in the list of Availability Zones parameter.",
      "Type": "String"
    },
    "Owner": {
      "Description": "Owner tag value",
      "Type": "String"
    },
    "PublicSubnet1CIDR": {
      "Description": "CIDR block for public subnet 1 located in Availability Zone 1",
      "Type": "String",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
    },
    "PublicSubnet2CIDR": {
      "Description": "CIDR block for public subnet 2 located in Availability Zone 2",
      "Type": "String",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
    },
    "PublicSubnet3CIDR": {
      "Description": "CIDR block for public subnet 3 located in Availability Zone 3",
      "Type": "String",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
    },
    "PublicSubnet4CIDR": {
      "Description": "CIDR block for public subnet 4 located in Availability Zone 4",
      "Type": "String",
      "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$"
    },
    "VPC": {
      "Description": "VPC ID",
      "Type": "String"
    },
    "VPCName": {
      "Description": "VPC Name",
      "Type": "String"
    }
  },
  "Conditions": {
    "3AZCondition": {
      "Fn::Or": [
        {
          "Fn::Equals": [
            {
              "Ref": "NumberOfAZs"
            },
            "3"
          ]
        },
        {
          "Condition": "4AZCondition"
        }
      ]
    },
    "4AZCondition": {
      "Fn::Equals": [
        {
          "Ref": "NumberOfAZs"
        },
        "4"
      ]
    }
  },
  "Resources": {
    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "0",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": {
          "Ref": "PublicSubnet1CIDR"
        },
        "MapPublicIpOnLaunch": true,
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": {
              "Ref": "CostCenter"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "VPCName"
            }
          },          
          {
            "Key": "Name",
            "Value": "public_subnet_1"
          },
          {
            "Key": "Network",
            "Value": "public"
          },
          {
            "Key": "Owner",
            "Value": {
              "Ref": "Owner"
            }
          }
        ]
      }
    },
    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "PublicSubnet2CIDR"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "1",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": {
              "Ref": "CostCenter"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "VPCName"
            }
          },          
          {
            "Key": "Name",
            "Value": "public_subnet_2"
          },
          {
            "Key": "Network",
            "Value": "public"
          },
          {
            "Key": "Owner",
            "Value": {
              "Ref": "Owner"
            }
          }
        ]
      }
    },
    "PublicSubnet3": {
      "Condition": "3AZCondition",
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "PublicSubnet3CIDR"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "2",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": {
              "Ref": "CostCenter"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "VPCName"
            }
          },          
          {
            "Key": "Name",
            "Value": "public_subnet_3"
          },
          {
            "Key": "Network",
            "Value": "public"
          },
          {
            "Key": "Owner",
            "Value": {
              "Ref": "Owner"
            }
          }
        ]
      }
    },
    "PublicSubnet4": {
      "Condition": "4AZCondition",
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": {
          "Ref": "PublicSubnet4CIDR"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            "3",
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": {
              "Ref": "CostCenter"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "VPCName"
            }
          },          
          {
            "Key": "Name",
            "Value": "public_subnet_4"
          },
          {
            "Key": "Network",
            "Value": "public"
          },
          {
            "Key": "Owner",
            "Value": {
              "Ref": "Owner"
            }
          }
        ]
      }
    },
    "PublicSubnet1RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": {
              "Ref": "CostCenter"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "VPCName"
            }
          },          
          {
            "Key": "Name",
            "Value": "public_route_table_1"
          },
          {
            "Key": "Network",
            "Value": "public"
          },
          {
            "Key": "Owner",
            "Value": {
              "Ref": "Owner"
            }
          }
        ]
      }
    },
    "PublicSubnet1InternetRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGatewayID"
        },
        "RouteTableId": {
          "Ref": "PublicSubnet1RouteTable"
        }
      }
    },
    "PublicSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet1"
        },
        "RouteTableId": {
          "Ref": "PublicSubnet1RouteTable"
        }
      }
    },
    "PublicSubnet2RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": {
              "Ref": "CostCenter"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "VPCName"
            }
          },          
          {
            "Key": "Name",
            "Value": "public_route_table_2"
          },
          {
            "Key": "Network",
            "Value": "public"
          },
          {
            "Key": "Owner",
            "Value": {
              "Ref": "Owner"
            }
          }
        ]
      }
    },
    "PublicSubnet2InternetRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGatewayID"
        },
        "RouteTableId": {
          "Ref": "PublicSubnet2RouteTable"
        }
      }
    },
    "PublicSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet2"
        },
        "RouteTableId": {
          "Ref": "PublicSubnet2RouteTable"
        }
      }
    },
    "PublicSubnet3RouteTable": {
      "Condition": "3AZCondition",
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": {
              "Ref": "CostCenter"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "VPCName"
            }
          },          
          {
            "Key": "Name",
            "Value": "public_route_table_3"
          },
          {
            "Key": "Network",
            "Value": "public"
          },
          {
            "Key": "Owner",
            "Value": {
              "Ref": "Owner"
            }
          }
        ]
      }
    },
    "PublicSubnet3InternetRoute": {
      "Condition": "3AZCondition",
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGatewayID"
        },
        "RouteTableId": {
          "Ref": "PublicSubnet3RouteTable"
        }
      }
    },
    "PublicSubnet3RouteTableAssociation": {
      "Condition": "3AZCondition",
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet3"
        },
        "RouteTableId": {
          "Ref": "PublicSubnet3RouteTable"
        }
      }
    },
    "PublicSubnet4RouteTable": {
      "Condition": "4AZCondition",
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": {
              "Ref": "CostCenter"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "VPCName"
            }
          },          
          {
            "Key": "Name",
            "Value": "public_route_table_4"
          },
          {
            "Key": "Network",
            "Value": "public"
          },
          {
            "Key": "Owner",
            "Value": {
              "Ref": "Owner"
            }
          }
        ]
      }
    },
    "PublicSubnet4InternetRoute": {
      "Condition": "4AZCondition",
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGatewayID"
        },
        "RouteTableId": {
          "Ref": "PublicSubnet4RouteTable"
        }
      }
    },
    "PublicSubnet4RouteTableAssociation": {
      "Condition": "4AZCondition",
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet4"
        },
        "RouteTableId": {
          "Ref": "PublicSubnet4RouteTable"
        }
      }
    },
    "PublicSubnetNetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "CostCenter",
            "Value": {
              "Ref": "CostCenter"
            }
          },
          {
            "Key": "Environment",
            "Value": {
              "Ref": "VPCName"
            }
          },
          {
            "Key": "Name",
            "Value": "public_nacl_1"
          },
          {
            "Key": "Network",
            "Value": "public"
          },
          {
            "Key": "Owner",
            "Value": {
              "Ref": "Owner"
            }
          }
        ]
      }
    },
    "PublicSubnetNetworkAclInboundEntry100": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PublicSubnetNetworkAcl"
        },
        "RuleNumber": "100",
        "Protocol": "-1",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": "0",
          "To": "65535"
        }
      }
    },
    "PublicSubnetNetworkAclOutboundEntry100": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "PublicSubnetNetworkAcl"
        },
        "RuleNumber": "100",
        "Protocol": "-1",
        "RuleAction": "allow",
        "Egress": "true",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": {
          "From": "0",
          "To": "65535"
        }
      }
    },
    "PublicSubnet1NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet1"
        },
        "NetworkAclId": {
          "Ref": "PublicSubnetNetworkAcl"
        }
      }
    },
    "PublicSubnet2NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet2"
        },
        "NetworkAclId": {
          "Ref": "PublicSubnetNetworkAcl"
        }
      }
    },
    "PublicSubnet3NetworkAclAssociation": {
      "Condition": "3AZCondition",
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet3"
        },
        "NetworkAclId": {
          "Ref": "PublicSubnetNetworkAcl"
        }
      }
    },
    "PublicSubnet4NetworkAclAssociation": {
      "Condition": "4AZCondition",
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnet4"
        },
        "NetworkAclId": {
          "Ref": "PublicSubnetNetworkAcl"
        }
      }
    },
    "NAT1EIP": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NAT2EIP": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NAT3EIP": {
      "Condition": "3AZCondition",
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NAT4EIP": {
      "Condition": "4AZCondition",
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NATGateway1": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NAT1EIP",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet1"
        }
      }
    },
    "NATGateway2": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NAT2EIP",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet2"
        }
      }
    },
    "NATGateway3": {
      "Condition": "3AZCondition",
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NAT3EIP",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet3"
        }
      }
    },
    "NATGateway4": {
      "Condition": "4AZCondition",
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NAT4EIP",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet4"
        }
      }
    }
  },
  "Outputs": {
    "PublicSubnet1CIDR": {
      "Description": "Internal Private subnet 1 CIDR in Availability Zone 1",
      "Value": {
        "Ref": "PublicSubnet1CIDR"
      }
    },
    "PublicSubnet1ID": {
      "Description": "Internal Private subnet 1 ID in Availability Zone 1",
      "Value": {
        "Ref": "PublicSubnet1"
      }
    },
    "PublicSubnet2CIDR": {
      "Description": "Internal Private subnet 2 CIDR in Availability Zone 2",
      "Value": {
        "Ref": "PublicSubnet2CIDR"
      }
    },
    "PublicSubnet2ID": {
      "Description": "Internal Private subnet 2 ID in Availability Zone 2",
      "Value": {
        "Ref": "PublicSubnet2"
      }
    },
    "PublicSubnet3CIDR": {
      "Condition": "3AZCondition",
      "Description": "Internal Private subnet 3 CIDR in Availability Zone 3",
      "Value": {
        "Ref": "PublicSubnet3CIDR"
      }
    },
    "PublicSubnet3ID": {
      "Condition": "3AZCondition",
      "Description": "Internal Private subnet 3 ID in Availability Zone 3",
      "Value": {
        "Ref": "PublicSubnet3"
      }
    },
    "PublicSubnet4CIDR": {
      "Condition": "4AZCondition",
      "Description": "Internal Private subnet 4 CIDR in Availability Zone 4",
      "Value": {
        "Ref": "PublicSubnet4CIDR"
      }
    },
    "PublicSubnet4ID": {
      "Condition": "4AZCondition",
      "Description": "Internal Private subnet 4 ID in Availability Zone 4",
      "Value": {
        "Ref": "PublicSubnet4"
      }
    },
    "NATGateway1ID": {
      "Description": "NAT Gateway ID in Availability Zone 1",
      "Value": {
        "Ref": "NATGateway1"
      }
    },
    "NATGateway2ID": {
      "Description": "NAT Gateway ID in Availability Zone 2",
      "Value": {
        "Ref": "NATGateway2"
      }
    },
    "NATGateway3ID": {
      "Condition": "3AZCondition",
      "Description": "NAT Gateway ID in Availability Zone 3",
      "Value": {
        "Ref": "NATGateway3"
      }
    },
    "NATGateway4ID": {
      "Condition": "4AZCondition",
      "Description": "NAT Gateway ID in Availability Zone 4",
      "Value": {
        "Ref": "NATGateway4"
      }
    }
  }
}
